<resources>

    <!--Activityes labels-->

    <string name="app_name">Tractor</string>
    <string name="device_list_activity_label">Выбор устройства</string>
    <string name="main_menu_activity_label">Главное меню</string>
    <string name="autopilot_activity_label">Автопилот</string>
    <string name="manual_control_activity_label">Ручное управление</string>
    <string name="add_track_activity_label">Добавление трека</string>
    <string name="debug_menu_activity_label">Меню отладки</string>


    <!--Component labels-->
    <string name="search_device_but_label">Поиск</string>
    <string name="search_device_but_label_cancel">Отмена</string>
    <!--Main menu-->
    <string name="autopilot_but_label">Автопилот</string>
    <string name="manual_control_but_label">Ручное управление</string>
    <string name="back_garage_but_label">Вернуться в гараж</string>
    <string name="diagnostics_but_label">Самодиагностика</string>
    <string name="follow_man_but_label">Следовать за человеком</string>
    <string name="stop_engine_but_label">Заглушить двигатель</string>
    <string name="start_engine_but_label">Запустить двигатель</string>
    <!--Autopilot menu-->
    <string name="add_track_but_label">Добавить новый трек</string>
    <string name="track_list_but_label">Ранее добавленные треки</string>
    <string name="add_track_manually_but_label">Ввести трек вручную</string>
    <string name="snow_removal_but_label">Проложить трек уборки снега</string>

    <!--Action bar menu-->
    <string name="actionbar_menu_disconnect_device">Отключиться от устройства</string>
    <string name="actionbar_menu_settings">Настройки</string>
    <string name="actionbar_menu_debug">Меню отладки</string>
    <string name="actionbar_menu_close_app">Выйти</string>


    <!--Texts-->

    <string name="ok_button_label">OK</string>
    <string name="wifi_button_label">Wi-Fi</string>
    <string name="bt_button_label">Bluetooth</string>

    <string name="bt_connect">Соединение</string>
    <string name="bt_connect_with">Соединение с</string>
    <string name="bt_on_disconnect_message">Соединение потеряно</string>
    <string name="add_track_message">Переместите телефон в исходную точку и нажмите "OK"</string>

    <string name="input_password">Введите пароль:</string>
    <string name="debug_menu_password">bbyby</string>
    <string name="password_error">Пароль неверный</string>
    <string name="bt_connection_to_device_success">Подключено к</string>
    <string name="bt_connection_error">Не удалось подключиться</string>


</resources>