<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">


    <item
        android:id="@+id/actionbar_menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="200"
        android:title="@string/actionbar_menu_settings"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/actionbar_menu_disable_connection"
        android:icon="@drawable/ic_bluetooth_disabled_white_24dp"
        android:orderInCategory="300"
        android:title="@string/actionbar_menu_disconnect_device"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/actionbar_menu_debug"
        android:icon="@drawable/ic_build_white_24dp"
        android:orderInCategory="400"
        android:title="@string/actionbar_menu_debug"
        app:showAsAction="withText"/>


    <item
        android:id="@+id/actionbar_menu_close_app"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:orderInCategory="500"
        android:title="@string/actionbar_menu_close_app"
        app:showAsAction="ifRoom"/>
</menu>